--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <div class="menu__line">
                     <img src="icons/line2.png" alt="icon">
                 </div>
-                <button class="button-main">Request a Quote</button>
             </div>
+            <button class="button-main header__button_top">Request a Quote</button>
             <div class="title">Professional cleaning services</div>
             <div class="subtitle">Enjoy a better house cleaning experience. All of our cleaners are stringently vetted and have their cleaning ability fully tested.</div>
-            <button class="button-main">Request a Quote</button>
-            <button class="button-secondary"><img src="icons/place-icon.png" alt="icon"> Location</button>
+            <button class="button-main header__button_middle" >Request a Quote</button>
+            <button class="button-secondary header__button_middle"><img src="icons/place-icon.png" alt="icon" class="button-secondary__icon"> Location</button>
             <div class="learn-more">
                 <div class="learn-more__title">Learn More</div>
                 <img src="icons/line.png" alt="line" class="learn-more__line">
