--- a/index.html
+++ b/index.html
@@ -44,5 +44,133 @@
             </div>
         </div>
     </header>
+
+    <section class="card">
+        <div class="card_container">
+            <div class="service card__house">
+                <img class="service__logo" src="" alt="">
+                <h2 class="service__title">House cleaning</h2>
+                <p class="servise__info">Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.</p>
+                <a href="#" class="service__link">Book online now</a>
+            </div>
+            <div class="service card__house">
+                <img class="service__logo" src="" alt="">
+                <h2 class="service__title">Commercial cleaning</h2>
+                <p class="servise__info">Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.</p>
+                <a href="#" class="service__link">Get a quote</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="info">
+        <h2 class="info__title">A new way of cleaning</h2>
+        <p class="info__text">We clean to such a high level that you’ll never even need to use our unique re-clean guarantee! This gives you peace of mind and saves you time.</p>
+        <p class="info__text">We love house cleaning and want to share with you its many benefits. Having our house cleaning services is about having the utmost professional people in your home, people you can trust and count on.
+        </p>
+        <p class="info__text"> When you choose Sparcle, you know you will be coming home with the peace of mind that only all natural cleaning products were used, making your home safe for your family, your pets and the planet.</p>
+    </section>
+
+    <section class="cleaning">
+        <div class="cleaning__container">
+            <img src="" alt="" class="cleaning__image_main">
+            <img src="" alt="" class="cleaning__image_right">
+            <h2 class="cleaning__title">
+                <span>become part of the team</span>
+                Professional cleaning service
+                of the year
+            </h2>
+            <p class="cleaning__info">
+                At Sparcle our entire philosophy is based on hiring warm people, not warm bodies. We know that you only want the best.
+            </p>
+            <div class="cleaning__point">Satisfaction guaranteed</div>
+            <div class="cleaning__point">Above average incomes</div>
+        </div>
+    </section>
+
+    <section class="select">
+        <div class="select__container">
+            <div class="select__top">
+                <h2 class="select__title">
+                    <span>Select your service</span>
+                    Book online
+                </h2>
+                <p class="select__info">
+                    Choose the type of cleaning that suits you the most.
+                    After that you just have to specify number of rooms and
+                    you are good to go.
+                </p>
+            </div>
+            <div class="select__bottom">
+                <h2>Type of cleaning</h2>
+                <bottom>Residential</bottom>
+                <bottom>Commercial</bottom>
+                <div>
+                    <h2>Number of bedrooms</h2>
+                    <div>4</div>
+                </div>
+                <div>
+                    <h2>Number of bathrooms</h2>
+                    <div>2</div>
+                </div>
+            </div>
+            <div class="price">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="customers">
+        <div class="customers-card">
+            <div class="customers-card__logo"></div>
+            <div class="customers-card__text"></div>
+            <div class="customers-card__author"></div>
+        </div>
+        <div class="customers-card">
+                <div class="customers-card__logo"></div>
+                <div class="customers-card__text"></div>
+                <div class="customers-card__author"></div>
+        </div>
+        <div class="customers-card">
+                <div class="customers-card__logo"></div>
+                <div class="customers-card__text"></div>
+                <div class="customers-card__author"></div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="sparcle">
+            <div class="sparcle__title">Sparcle</div>
+            <div class="sparcle__text">Enjoy a better cleaning experience with us</div>
+            <div class="sparcle__social"></div>
+        </div>
+        <div class="house">
+            <a href="#">What's included</a>
+            <a href="#">Speciality Cleaning</a>
+            <a href="#">Deep Cleaning</a>
+            <a href="#">Careers</a>
+        </div>
+        <div class="Commercial">
+            <a href="#">Green Cleaning</a>
+            <a href="#">Secure Daytime Cleaning</a>
+            <a href="#">Apartment Cleaning</a>
+            <a href="#">Event Cleaning</a>
+        </div>
+        <div class="contact">
+            <div class="contact__info">
+                Borongajska cesta bb,<br>
+                10000 Zagreb<br>
+                01 23 95 313<br>
+                   hello@sparcle.co
+            </div>
+        </div>
+        <div class="footer__bottom">
+            Copyright Sparcle. Team d.o.o., All Rights Reserved
+        </div>
+    </footer>
 </body>
 </html>
