--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <div class="logo">
+        <div class="header__container">
+            <div class="logo header__logo">
                 <div class="logo__icon"><img src="icons/icon-header.png" alt="icon"></div>
-                <div class="logo__name">sparcle</div>
+                <div class="logo__name">sparcle.</div>
             </div>
-            <div class="menu">
+            <div class="menu header__menu">
                 <ul class="menu__list">
                     <li>Our services</li>
                     <li>Why hire us</li>
@@ -28,9 +28,11 @@
                     <img src="icons/line2.png" alt="icon">
                 </div>
             </div>
-            <button class="button-main header__button_top">Request a Quote</button>
-            <div class="title">Professional cleaning services</div>
-            <div class="subtitle">Enjoy a better house cleaning experience. All of our cleaners are stringently vetted and have their cleaning ability fully tested.</div>
+            <div class="btn header__btn">
+                <button class="btn__menu">Request a Quote</button>
+            </div>
+            <div class="header__title">Professional cleaning services</div>
+            <div class="header__subtitle">Enjoy a better house cleaning experience. All of our cleaners are stringently vetted and have their cleaning ability fully tested.</div>
             <button class="button-main header__button_middle" >Request a Quote</button>
             <button class="button-secondary header__button_middle"><img src="icons/place-icon.png" alt="icon" class="button-secondary__icon"> Location</button>
             <div class="learn-more">
