--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
             </div>
             <div class="header__title">Professional cleaning services</div>
             <div class="header__subtitle">Enjoy a better house cleaning experience. All of our cleaners are stringently vetted and have their cleaning ability fully tested.</div>
-            <button class="button-main header__button_middle" >Request a Quote</button>
-            <button class="button-secondary header__button_middle"><img src="icons/place-icon.png" alt="icon" class="button-secondary__icon"> Location</button>
-            <div class="learn-more">
+            <div class="btn-block header__btn--bottom">
+                <button class="btn__menu" >Request a Quote</button>
+                <button class="btn__secondary"><img src="icons/place-icon.png" alt="icon" class="btn__icon"> Location</button>
+            </div>
+            <div class="learn-more header__learn-more">
                 <div class="learn-more__title">Learn More</div>
                 <img src="icons/line.png" alt="line" class="learn-more__line">
                 <img src="icons/circle.png" alt="circle" class="learn-more__circle">
                 <img src="icons/arrow.png" alt="arrow" class="learn-more__arrow">
             </div>
-            <div class="header-bottom">
-                <div class="header-bottom__title">scroll to discover more</div>
+            <div class="bottom header__bottom">
+                <div class="bottom__title">scroll to discover more</div>
             </div>
         </div>
     </header>
