--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
     </header>
 
     <section class="card">
-        <div class="card_container">
+        <div class="card__container">
             <div class="service card__house">
-                <img class="service__logo" src="" alt="">
+                <img class="service__logo" src="icons/house-icon.png" alt="icon">
                 <h2 class="service__title">House cleaning</h2>
-                <p class="servise__info">Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.</p>
+                <p class="service__info">Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.</p>
                 <a href="#" class="service__link">Book online now</a>
             </div>
-            <div class="service card__house">
-                <img class="service__logo" src="" alt="">
+            <div class="service card__house card__house--blue">
+                <img class="service__logo" src="icons/commercial.png" alt="icon">
                 <h2 class="service__title">Commercial cleaning</h2>
-                <p class="servise__info">Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.</p>
+                <p class="service__info">Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.</p>
                 <a href="#" class="service__link">Get a quote</a>
             </div>
         </div>
