--- a/index.html
+++ b/index.html
@@ -67,17 +67,20 @@
     </section>
 
     <section class="info">
-        <h2 class="info__title">A new way of cleaning</h2>
-        <p class="info__text">We clean to such a high level that you’ll never even need to use our unique re-clean guarantee! This gives you peace of mind and saves you time.</p>
-        <p class="info__text">We love house cleaning and want to share with you its many benefits. Having our house cleaning services is about having the utmost professional people in your home, people you can trust and count on.
-        </p>
-        <p class="info__text"> When you choose Sparcle, you know you will be coming home with the peace of mind that only all natural cleaning products were used, making your home safe for your family, your pets and the planet.</p>
+        <div class="info__container">
+            <h2 class="info__title">A new way of cleaning</h2>
+            <p class="info__text--left">We clean to such a high level that you’ll never even need to use our unique re-clean guarantee! This gives you peace of mind and saves you time.</p>
+            <p class="info__text--right">We love house cleaning and want to share with you its many benefits. Having our house cleaning services is about having the utmost professional people in your home, people you can trust and count on.
+            </p>
+            <p class="info__text--bottom"> When you choose Sparcle, you know you will be coming home with the peace of mind that only all natural cleaning products were used, making your home safe for your family, your pets and the planet.</p>
+        </div>
     </section>
 
     <section class="cleaning">
         <div class="cleaning__container">
-            <img src="" alt="" class="cleaning__image_main">
-            <img src="" alt="" class="cleaning__image_right">
+            <img src="img/image.png" alt="img" class="cleaning__image--main">
+            <img src="img/dots.png" alt="img" class="cleaning__image--center">
+            <img src="img/color.png" alt="img" class="cleaning__image--right">
             <h2 class="cleaning__title">
                 <span>become part of the team</span>
                 Professional cleaning service
@@ -86,8 +89,8 @@
             <p class="cleaning__info">
                 At Sparcle our entire philosophy is based on hiring warm people, not warm bodies. We know that you only want the best.
             </p>
-            <div class="cleaning__point">Satisfaction guaranteed</div>
-            <div class="cleaning__point">Above average incomes</div>
+            <div class="cleaning__point--first">Satisfaction guaranteed</div>
+            <div class="cleaning__point--second">Above average incomes</div>
         </div>
     </section>
 
@@ -117,63 +120,69 @@
                     <div>2</div>
                 </div>
             </div>
-            <div class="price">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="select__price">
+                <div>Subtotal 130,00 $</div>
+                <div>Residential Cleaning - 5 hours</div>
+                <div>includes: 4 bedrooms, 2 bathrooms</div>
+                <div><input type="text"></div>
+                <div><input type="text"></div>
+                <div><input type="text"></div>
+                <div>Continue Booking</div>
             </div>
         </div>
     </section>
 
     <section class="customers">
-        <div class="customers-card">
-            <div class="customers-card__logo"></div>
-            <div class="customers-card__text"></div>
-            <div class="customers-card__author"></div>
-        </div>
-        <div class="customers-card">
-                <div class="customers-card__logo"></div>
-                <div class="customers-card__text"></div>
-                <div class="customers-card__author"></div>
-        </div>
-        <div class="customers-card">
-                <div class="customers-card__logo"></div>
-                <div class="customers-card__text"></div>
-                <div class="customers-card__author"></div>
+        <div class="customers__container">
+            <div class="customers-card customers__item">
+                <div class="customers-card__logo"><img src="img/photo1.png" alt="img"></div>
+                <div class="customers-card__text">“There is no better feeling than walking into a super clean home, and knowing that someone else took time to do it :)”</div>
+                <div class="customers-card__author">Maria Owen</div>
+            </div>
+            <div class="customers-card customers__item">
+                    <div class="customers-card__logo"><img src="img/photo2.png" alt="img"></div>
+                    <div class="customers-card__text">“Super fast hard workers! Polite and friendly! Highly recommend the odd jobers if you need a job done fast and done right!”</div>
+                    <div class="customers-card__author"> Julia Ivanovich</div>
+            </div>
+            <div class="customers-card customers__item">
+                    <div class="customers-card__logo"><img src="img/photo3.png" alt="img"></div>
+                    <div class="customers-card__text">“They absolutely make my life better! So professional and organized. They have a checklist for what is cleaned so that you know that it will be the same deep, thorough cleaning every time. </div>
+                    <div class="customers-card__author">Mika Bazovska</div>
+            </div>
         </div>
     </section>
 
     <footer class="footer">
-        <div class="sparcle">
-            <div class="sparcle__title">Sparcle</div>
-            <div class="sparcle__text">Enjoy a better cleaning experience with us</div>
-            <div class="sparcle__social"></div>
-        </div>
-        <div class="house">
-            <a href="#">What's included</a>
-            <a href="#">Speciality Cleaning</a>
-            <a href="#">Deep Cleaning</a>
-            <a href="#">Careers</a>
-        </div>
-        <div class="Commercial">
-            <a href="#">Green Cleaning</a>
-            <a href="#">Secure Daytime Cleaning</a>
-            <a href="#">Apartment Cleaning</a>
-            <a href="#">Event Cleaning</a>
-        </div>
-        <div class="contact">
-            <div class="contact__info">
-                Borongajska cesta bb,<br>
-                10000 Zagreb<br>
-                01 23 95 313<br>
-                   hello@sparcle.co
+        <div class="footer__container">
+
+            <div class="sparcle footer__sparcle">
+                <div class="sparcle__title">Sparcle</div>
+                <div class="sparcle__text">Enjoy a better cleaning experience with us</div>
+                <div class="sparcle__social"></div>
             </div>
-        </div>
-        <div class="footer__bottom">
-            Copyright Sparcle. Team d.o.o., All Rights Reserved
+            <div class="house footer__house">
+                <a href="#">What's included</a>
+                <a href="#">Speciality Cleaning</a>
+                <a href="#">Deep Cleaning</a>
+                <a href="#">Careers</a>
+            </div>
+            <div class="commercial footer__commercial">
+                <a href="#">Green Cleaning</a>
+                <a href="#">Secure Daytime Cleaning</a>
+                <a href="#">Apartment Cleaning</a>
+                <a href="#">Event Cleaning</a>
+            </div>
+            <div class="contact footer__contact">
+                <div class="contact__info">
+                    Borongajska cesta bb,<br>
+                    10000 Zagreb<br>
+                    01 23 95 313<br>
+                       hello@sparcle.co
+                </div>
+            </div>
+            <div class="footer__bottom">
+                Copyright Sparcle. Team d.o.o., All Rights Reserved
+            </div>
         </div>
     </footer>
 </body>
