--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -89,8 +90,8 @@
             <p class="cleaning__info">
                 At Sparcle our entire philosophy is based on hiring warm people, not warm bodies. We know that you only want the best.
             </p>
-            <div class="cleaning__point--first">Satisfaction guaranteed</div>
-            <div class="cleaning__point--second">Above average incomes</div>
+            <div class="cleaning__point--first"> <span>&#10004;</span>  Satisfaction guaranteed</div>
+            <div class="cleaning__point--second"> <span>&#10004;</span>  Above average incomes</div>
         </div>
     </section>
 
@@ -109,42 +110,53 @@
             </div>
             <div class="select__bottom">
                 <h2>Type of cleaning</h2>
-                <bottom>Residential</bottom>
-                <bottom>Commercial</bottom>
+                <button id="res">Residential</button>
+                <button id="com">Commercial</button>
                 <div>
                     <h2>Number of bedrooms</h2>
-                    <div>4</div>
+                    <button id="plusBed">&plus;</button> <div id="bed">4</div> <button id="minusBed">&minus;</button></button>
                 </div>
                 <div>
                     <h2>Number of bathrooms</h2>
-                    <div>2</div>
+                    <button id="plusBath">&plus;</button> <div id="bath">3</div> <button id="minusBath">&minus;</button></button>
                 </div>
             </div>
             <div class="select__price">
                 <div>Subtotal 130,00 $</div>
                 <div>Residential Cleaning - 5 hours</div>
                 <div>includes: 4 bedrooms, 2 bathrooms</div>
-                <div><input type="text"></div>
-                <div><input type="text"></div>
-                <div><input type="text"></div>
-                <div>Continue Booking</div>
+                <div class="form-group">
+                    <input type="text" class=form-group__input placeholder="Full name" id="name" required>
+                    <label for="name" class="form-group__label">YOUR FULL NAME</label>
+                </div>
+                <div class="form-group">
+                    <input type="phone" class=form-group__input placeholder="Enter your phone number" id="phone" required>
+                    <label for="phone" class="form-group__label">YOUR PHONE NUMBER</label>
+                </div>
+                <div class="form-group">
+                    <input type="email" class=form-group__input placeholder="Enter your email adress" id="email" required>
+                    <label for="email" class="form-group__label">YOUR   EMAIL ADRESS</label>
+                </div>
+                
+                <div>Continue Booking <span>&gt;</span></div>
             </div>
         </div>
     </section>
 
     <section class="customers">
         <div class="customers__container">
-            <div class="customers-card customers__item">
+            <div class="customers__title">What our customers say</div>
+            <div class="customers-card customers__item1">
                 <div class="customers-card__logo"><img src="img/photo1.png" alt="img"></div>
                 <div class="customers-card__text">“There is no better feeling than walking into a super clean home, and knowing that someone else took time to do it :)”</div>
                 <div class="customers-card__author">Maria Owen</div>
             </div>
-            <div class="customers-card customers__item">
+            <div class="customers-card customers__item2">
                     <div class="customers-card__logo"><img src="img/photo2.png" alt="img"></div>
                     <div class="customers-card__text">“Super fast hard workers! Polite and friendly! Highly recommend the odd jobers if you need a job done fast and done right!”</div>
                     <div class="customers-card__author"> Julia Ivanovich</div>
             </div>
-            <div class="customers-card customers__item">
+            <div class="customers-card customers__item3">
                     <div class="customers-card__logo"><img src="img/photo3.png" alt="img"></div>
                     <div class="customers-card__text">“They absolutely make my life better! So professional and organized. They have a checklist for what is cleaned so that you know that it will be the same deep, thorough cleaning every time. </div>
                     <div class="customers-card__author">Mika Bazovska</div>
@@ -157,8 +169,13 @@
 
             <div class="sparcle footer__sparcle">
                 <div class="sparcle__title">Sparcle</div>
-                <div class="sparcle__text">Enjoy a better cleaning experience with us</div>
-                <div class="sparcle__social"></div>
+                <div class="sparcle__text">Enjoy a better cleaning</div>
+                <div class="sparcle__text">experience with us</div>
+                <div class="sparcle__social">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
             </div>
             <div class="house footer__house">
                 <a href="#">What's included</a>
@@ -174,10 +191,10 @@
             </div>
             <div class="contact footer__contact">
                 <div class="contact__info">
-                    Borongajska cesta bb,<br>
-                    10000 Zagreb<br>
-                    01 23 95 313<br>
-                       hello@sparcle.co
+                    <div>Borongajska cesta bb,</div>
+                    <div>10000 Zagreb</div>
+                    <div>01 23 95 313</div>
+                    <a>hello@sparcle.co</a>           
                 </div>
             </div>
             <div class="footer__bottom">
@@ -185,5 +202,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
